# Musica

./: .gitignore  README.md
.github/workflows/: release.yml
backend/: .env.example  build_sidecar.sh  pyproject.toml  sidecar.py  tidal-backend.spec
backend/app/: composition.py  config.py  main.py
backend/app/application/auth/: use_cases.py
backend/app/application/catalog/: use_cases.py
backend/app/application/discovery/: save_to_playlist.py  use_cases.py
backend/app/domain/auth/: entities.py  ports.py
backend/app/domain/catalog/: entities.py  ports.py
backend/app/domain/discovery/: entities.py  ports.py
backend/app/infrastructure/ai/: _shared.py  curator.py  fallback_curator.py  ollama_curator.py
backend/app/infrastructure/lastfm/: recommendation.py
backend/app/infrastructure/persistence/: db.py  repository.py  tables.py
backend/app/infrastructure/qobuz/: gateway.py
backend/app/infrastructure/security/: token_store.py
backend/app/infrastructure/spotify/: gateway.py
backend/app/infrastructure/tidal/: gateway.py
backend/app/interface/http/: dto.py  routers.py
desktop/: package-lock.json  package.json
desktop/src/: App.css  App.tsx  api.ts  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
desktop/src/components/: ConnectPanel.tsx  DiscoverView.tsx  LibraryView.tsx  ProviderIcon.tsx  SearchView.tsx  SettingsPanel.tsx  Thumb.tsx
docs/: PROJECT.md  USER_GUIDE.md
docs/research/: DATA_SCHEMA.md  LLM_FOUNDATIONS.md  REVIEW_RECORD.md
