[project]
name = "tidal-manager-backend"
version = "0.3.0"
description = "Python sidecar for Tidal Manager — Tidal integration + AI discovery"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "tidalapi>=0.8.3",
    "sqlmodel>=0.0.16",
    "keyring>=25.0",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    # Windows keyring backend (Credential Locker) — only installed on Windows.
    "pywin32-ctypes>=0.2; sys_platform == 'win32'",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
